little fix on button and added 1 project

--- a/src/styles/_global.scss
+++ b/src/styles/_global.scss
@@ -49,6 +49,5 @@ $addColors: (
 $colors: map-merge($colors, $addColors);
 
 
-// Import Bulma and Buefy styles
+// Import Bulma styles
 @import "~bulma";
-// @import "~buefy/src/scss/buefy";
