--- a/src/styles/_global.scss
+++ b/src/styles/_global.scss
@@ -5,7 +5,7 @@
 // Import fonts
 @import url('https://fonts.googleapis.com/css2?family=Fira+Code&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Montserrat&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Fira+Sans&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Fira+Sans:wght@400;600;700;800;900&display=swap');
 
 $family-fira-code: 'Fira Code', monospace;
 $family-montserrat: 'Montserrat', sans-serif;
